2008-08-19  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkScroll.c:  Don't use sprintf "%g" to
	format floating point numbers in -[xy]scrollcommand callbacks
	or [xy]view methods.  Minor incompatibility: 0 and 1 now
	formatted as "0.0" resp "1.0".
	* tests/ttk/entry.test, tests/ttk/treeview.test: Updated
	to account for above change.

2008-08-19  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXFont.c (SetFontFeatures):	Disable antialiasing of
						 	fixed-width fonts with
						 	size <= 10.

2008-08-14  Daniel Steffen  <das@users.sourceforge.net>

	*** 8.5.4 TAGGED FOR RELEASE ***

	* unix/tcl.m4 (SC_PATH_X):	check for libX11.dylib in addition to
					libX11.so et al.

	* unix/configure: 		autoconf-2.59

2008-08-08  Don Porter  <dgp@users.sourceforge.net>

	* generic/tk.h:		Bump to 8.5.4 for release.
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:
	* README:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Updates for 8.5.4 release.

2008-08-05  Joe English  <jenglish@users.sourceforge.net>

	* generic/tk.h, generic/tkEvent.c: Fix for [Bug 2010422]
	"no event type or button # or keysym while executing
	"bind Listbox <MouseWheel> [...]".

2008-08-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinWm.c: Backported fixes for handling unmapped parent
	* test/wm.test:  toplevels. [Bug 2009788, 2028703]

2008-07-31  Don Porter  <dgp@users.sourceforge.net>

	* generic/tk.h:	Added missing EXTERN for the Tcl_PkgInitStubsCheck
	declaration to fix inability to embed non-stub-enabled Tk on Windows.

2008-07-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* doc/options.n: Direct to the font manual for -font [Bug 1686012]

	* win/tkWinWindow.c: Check for 0x prefix in sprintf %p. Bug [2026405]

2008-07-22  Daniel Steffen  <das@users.sourceforge.net>

	* library/ttk/aquaTheme.tcl: Use system color names and TIP145 named